Add RPA3 workflow and enhance configuration management
- Introduced `run_rpa3` function in `main.py` to execute the new RPA3 workflow.
- Updated `Makefile` to include targets for running RPA3 in various environments.
- Enhanced `README.md` to document the new RPA3 workflow and its configuration.
- Modified `pyproject.toml` to include test paths for RPA3.
- Implemented a `ConfigManager` class in `core/config.py` for improved configuration handling across environments and workflows.
- Updated RPA1 and RPA2 workflows to utilize environment-specific configurations.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,7 @@ ban-relative-imports = "all"
 max-complexity = 10
 
 [tool.pytest.ini_options]
-testpaths = ["core/test", "flows/rpa1/test", "flows/rpa2/test"]
+testpaths = ["core/test", "flows/rpa1/test", "flows/rpa2/test", "flows/rpa3/test"]
 python_files = ["test_*.py", "*_test.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
