database manager implementation

--- a/core/envs/.env.staging
+++ b/core/envs/.env.staging
@@ -5,6 +5,25 @@ GLOBAL_DEBUG_MODE=false
 GLOBAL_MAX_RETRIES=3
 GLOBAL_TIMEOUT=60
 
+# Database Configuration - RPA Database (PostgreSQL)
+STAGING_GLOBAL_RPA_DB_TYPE=postgresql
+STAGING_GLOBAL_RPA_DB_CONNECTION_STRING=postgresql://rpa_user:staging_password@staging-postgres.internal:5432/rpa_staging
+STAGING_GLOBAL_RPA_DB_POOL_SIZE=8
+STAGING_GLOBAL_RPA_DB_MAX_OVERFLOW=15
+STAGING_GLOBAL_RPA_DB_TIMEOUT=45
+
+# Database Configuration - SurveyHub (SQL Server - Read Only)
+STAGING_GLOBAL_SURVEYHUB_TYPE=sqlserver
+STAGING_GLOBAL_SURVEYHUB_CONNECTION_STRING=mssql+pyodbc://survey_readonly:staging_password@staging-sqlserver.internal:1433/SurveyHub_Staging?driver=ODBC+Driver+17+for+SQL+Server&Encrypt=yes&TrustServerCertificate=no
+STAGING_GLOBAL_SURVEYHUB_POOL_SIZE=5
+STAGING_GLOBAL_SURVEYHUB_MAX_OVERFLOW=8
+STAGING_GLOBAL_SURVEYHUB_TIMEOUT=45
+
+# Global Database Settings
+STAGING_GLOBAL_DATABASE_RETRY_ATTEMPTS=3
+STAGING_GLOBAL_DATABASE_RETRY_MIN_WAIT=2
+STAGING_GLOBAL_DATABASE_RETRY_MAX_WAIT=15
+
 # Global Secrets
 GLOBAL_API_KEY=staging-global-api-key-456
 GLOBAL_DB_PASSWORD=staging-global-db-password
