--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,13 @@ dependencies = [
     "pytest>=8.4.2",
     "pytest-asyncio>=1.2.0",
     "pytest-cov>=7.0.0",
+    "pytest-mock>=3.12.0",
     "pytest-watch>=4.2.0",
+    "psycopg2-binary>=2.9.0",
+    "pyodbc>=4.0.0",
+    "pyway<=0.3.32",
+    "sqlalchemy>=2.0.0",
+    "tenacity>=8.0.0",
 ]
 
 [project.optional-dependencies]
@@ -72,4 +78,14 @@ markers = [
     "unit: Unit tests for individual components",
     "integration: Integration tests for workflows",
     "slow: Slow running tests",
+]
+
+[tool.flake8]
+max-line-length = 88
+extend-ignore = ["E203", "W503"]
+
+[dependency-groups]
+dev = [
+    "flake8>=7.3.0",
+    "ruff>=0.13.2",
 ]
