implemented distributed processing

--- a/core/envs/.env.staging
+++ b/core/envs/.env.staging
@@ -24,6 +24,14 @@ STAGING_GLOBAL_DATABASE_RETRY_ATTEMPTS=3
 STAGING_GLOBAL_DATABASE_RETRY_MIN_WAIT=2
 STAGING_GLOBAL_DATABASE_RETRY_MAX_WAIT=15
 
+# Distributed Processing Configuration
+STAGING_GLOBAL_DISTRIBUTED_PROCESSOR_DEFAULT_BATCH_SIZE=100
+STAGING_GLOBAL_DISTRIBUTED_PROCESSOR_CLEANUP_TIMEOUT_HOURS=2
+STAGING_GLOBAL_DISTRIBUTED_PROCESSOR_MAX_RETRIES=5
+STAGING_GLOBAL_DISTRIBUTED_PROCESSOR_HEALTH_CHECK_INTERVAL=300
+STAGING_GLOBAL_DISTRIBUTED_PROCESSOR_ENABLED=true
+STAGING_GLOBAL_DISTRIBUTED_PROCESSOR_REQUIRED_DATABASES=rpa_db,SurveyHub
+
 # Global Secrets
 GLOBAL_API_KEY=staging-global-api-key-456
 GLOBAL_DB_PASSWORD=staging-global-db-password
