--- a/flows/rpa1/.env.development.example
+++ b/flows/rpa1/.env.development.example
@@ -13,6 +13,12 @@ DEVELOPMENT_RPA1_DATABASE_RETRY_ATTEMPTS=5
 DEVELOPMENT_RPA1_DATABASE_RETRY_MIN_WAIT=2
 DEVELOPMENT_RPA1_DATABASE_RETRY_MAX_WAIT=20
 
+# Flow-specific distributed processing settings for RPA1
+DEVELOPMENT_RPA1_DISTRIBUTED_PROCESSOR_DEFAULT_BATCH_SIZE=25
+DEVELOPMENT_RPA1_DISTRIBUTED_PROCESSOR_CLEANUP_TIMEOUT_HOURS=1
+DEVELOPMENT_RPA1_DISTRIBUTED_PROCESSOR_MAX_RETRIES=2
+DEVELOPMENT_RPA1_DISTRIBUTED_PROCESSOR_ENABLED=true
+
 # Example: Flow-specific database connection (if RPA1 needs a different database)
 # DEVELOPMENT_RPA1_RPA_DB_CONNECTION_STRING=postgresql://rpa1_user:dev_password@localhost:5432/rpa1_development
 
