--- a/flows/rpa2/.env.development.example
+++ b/flows/rpa2/.env.development.example
@@ -14,5 +14,11 @@ DEVELOPMENT_RPA2_DATABASE_RETRY_ATTEMPTS=4
 DEVELOPMENT_RPA2_DATABASE_RETRY_MIN_WAIT=1
 DEVELOPMENT_RPA2_DATABASE_RETRY_MAX_WAIT=15
 
+# Flow-specific distributed processing settings for RPA2
+DEVELOPMENT_RPA2_DISTRIBUTED_PROCESSOR_DEFAULT_BATCH_SIZE=75
+DEVELOPMENT_RPA2_DISTRIBUTED_PROCESSOR_CLEANUP_TIMEOUT_HOURS=2
+DEVELOPMENT_RPA2_DISTRIBUTED_PROCESSOR_MAX_RETRIES=4
+DEVELOPMENT_RPA2_DISTRIBUTED_PROCESSOR_ENABLED=true
+
 # Copy this file to .env.development to activate flow-specific settings
 # cp .env.development.example .env.development
