--- a/flows/rpa3/.env.development.example
+++ b/flows/rpa3/.env.development.example
@@ -16,5 +16,11 @@ DEVELOPMENT_RPA3_DATABASE_RETRY_ATTEMPTS=5
 DEVELOPMENT_RPA3_DATABASE_RETRY_MIN_WAIT=0.5
 DEVELOPMENT_RPA3_DATABASE_RETRY_MAX_WAIT=10
 
+# Flow-specific distributed processing settings for RPA3 (high-throughput)
+DEVELOPMENT_RPA3_DISTRIBUTED_PROCESSOR_DEFAULT_BATCH_SIZE=150
+DEVELOPMENT_RPA3_DISTRIBUTED_PROCESSOR_CLEANUP_TIMEOUT_HOURS=1
+DEVELOPMENT_RPA3_DISTRIBUTED_PROCESSOR_MAX_RETRIES=3
+DEVELOPMENT_RPA3_DISTRIBUTED_PROCESSOR_ENABLED=true
+
 # Copy this file to .env.development to activate flow-specific settings
 # cp .env.development.example .env.development
