--- a/Dockerfile.flow1
+++ b/Dockerfile.flow1
@@ -17,9 +17,10 @@ ENV FLOW_NAME=rpa1 \
 # Copy flow-specific code
 COPY flows/rpa1/ ./flows/rpa1/
 
-# Copy flow-specific startup script
+# Copy flow-specific startup scripts
 COPY scripts/flow_startup.sh ./scripts/
-RUN chmod +x ./scripts/flow_startup.sh
+COPY scripts/container_lifecycle_startup.py ./scripts/
+RUN chmod +x ./scripts/flow_startup.sh ./scripts/container_lifecycle_startup.py
 
 # Create flow-specific directories with proper permissions
 RUN mkdir -p /app/flows/rpa1/data /app/flows/rpa1/output && \
@@ -32,5 +33,5 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=15s --retries=3 \
 # Set working directory to flow
 WORKDIR /app/flows/rpa1
 
-# Default command runs the flow startup script
-CMD ["../../scripts/flow_startup.sh", "rpa1"]
+# Default command runs the enhanced lifecycle startup script
+CMD ["python", "../../scripts/container_lifecycle_startup.py", "--flow-name", "rpa1", "--mode", "managed"]
