--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "psutil>=7.1.0",
     "watchdog>=3.0.0",
     "docker>=6.0.0",
+    "httpx>=0.24.0",
 ]
 
 [project.optional-dependencies]
